feat: add fhe to existing game

--- a/index.html
+++ b/index.html
@@ -1,25 +1,47 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vault Wars - Cyberpunk FHE Battle Arena</title>
-    <meta name="description" content="Battle for the vault. Breach your rival under encryption in this cyberpunk hacker duel game." />
+    <meta
+      name="description"
+      content="Battle for the vault. Breach your rival under encryption in this cyberpunk hacker duel game."
+    />
     <meta name="author" content="Vault Wars" />
-    
-    <!-- Cyberpunk fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600;700&family=Orbitron:wght@400;600;700;900&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Vault Wars - Cyberpunk FHE Battle Arena" />
-    <meta property="og:description" content="Battle for the vault. Breach your rival under encryption in this cyberpunk hacker duel game." />
+    <!-- Cyberpunk fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600;700&family=Orbitron:wght@400;600;700;900&display=swap"
+      rel="stylesheet"
+    />
+
+    <meta
+      property="og:title"
+      content="Vault Wars - Cyberpunk FHE Battle Arena"
+    />
+    <meta
+      property="og:description"
+      content="Battle for the vault. Breach your rival under encryption in this cyberpunk hacker duel game."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      name="twitter:image"
+      content="https://lovable.dev/opengraph-image-p98pqg.png"
+    />
+    <script
+      src="https://cdn.zama.ai/relayer-sdk-js/0.2.0/relayer-sdk-js.umd.cjs"
+      type="text/javascript"
+    ></script>
   </head>
 
   <body>
